--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <body>
   <section class="page-header">
 
-    <h1 class="project-name"><a href="Notes/" id="return">{{ site.title | default: site.github.repository_name }}</a></h1>
+    <h1 class="project-name"><a href="/Notes/" id="return">{{ site.title | default: site.github.repository_name }}</a></h1>
 
     <style>
        #return {
